<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Job4j Экзамен</string>

    <string name="domain_prompt">Выберите область</string>
    <string name="exp_date">Дата проведения испытания</string>
    <string name="Object_name">Имя объекта</string>
    <string name="the_address">Улица и дом</string>
    <string name="name_of_customer">ФИО заказчика</string>
    <string name="temperature">Температура воздуха</string>
    <string name="city">Город</string>
    <string name="humidity">Влажность воздуха</string>
    <string name="atm_pressure">Атмосферное давление</string>
    <string name="report_number">Номер отчета</string>
    <string name="hello" translatable="false">Hello, Artem Alekseev!</string>
    <string name="button_back">Назад</string>
    <string name="button_next">Далее</string>
    <string name="button_result">Результат</string>
    <string name="restart">Сначала</string>
    <string name="button_hint">Подсказка</string>
    <string name="button_exam_list">Список экзаменов</string>
    <string name="button_date_time">Дата/Время</string>
    <string name="button_set_date_and_time">Установить дату и время</string>
    <string name="text_date_and_time">Дата и время</string>
    <string name="add_item">Добавить</string>
    <string name="delete_item">Удалить</string>
    <string name="start_exam">Начать экзамен</string>
    <string name="back_to_list">Вернуться к списку экзаменов</string>
    <string name="correct_anwers">\правильных ответов из\</string>
    <string name="your_answer_is">\Твой ответ\</string>
    <string name="correct_is">\правильный\</string>
    <string-array name="domain_arrays">
        <item>Выберите область</item>
        <item>Московская</item>
        <item>СПб</item>
    </string-array>
</resources>
