<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                style="@style/CustomText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="250dp"
                android:text="@string/city" />

            <Spinner
                android:id="@+id/spinner"
                style="@style/CustomTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/domain_arrays"
                android:prompt="@string/domain_prompt"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="160dp"
                android:text="@string/Object_name" />

            <EditText
                android:id="@+id/editText1"
                style="@style/CustomTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Object_name"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="160dp"
                android:text="@string/the_address" />

            <EditText
                android:id="@+id/editText2"
                style="@style/CustomTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/the_address"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="160dp"
                android:text="@string/name_of_customer" />

            <EditText
                android:id="@+id/editText4"
                style="@style/CustomTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name_of_customer"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="160dp"
                android:text="@string/temperature" />

            <EditText
                android:id="@+id/editText5"
                style="@style/CustomTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/temperature"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="160dp"
                android:text="@string/humidity" />

            <EditText
                android:id="@+id/editText6"
                style="@style/CustomTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/humidity"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="160dp"
                android:text="@string/atm_pressure" />

            <EditText
                android:id="@+id/editText7"
                style="@style/CustomTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/atm_pressure"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="160dp"
                android:text="@string/report_number" />

            <EditText
                android:id="@+id/editText"
                style="@style/CustomTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/report_number"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_back"
                android:theme="@style/CustomButton" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_next"
                android:theme="@style/CustomButton" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>